# Client-Server-Playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
src/engine/Client/: CMakeLists.txt  Client.cpp  Commands.cpp  QuickStart.cpp  QuickStart.h  RenderThread.cpp
src/engine/Server/: CMakeLists.txt  GameThread.cpp  GameThread.h  RenderThread.cpp  RenderThread.h  Server.cpp
src/engine/Shared/: Command.h  Commands.h  Config.cpp  Config.h  Console.cpp  Console.h  ErrorHandle.cpp  ErrorHandle.h  InputSystem.cpp  InputSystem.h  Log.cpp  Log.h  LogUtils.h  PlayerAction.h  Timer.cpp  Timer.h  Utils.h  Utils.ipp  Window.cpp  Window.h
src/engine/Shared/ImGui/: imgui.cpp  imgui_demo.cpp  imgui_logger.cpp  imgui_logger.h  imgui_widgets.cpp
src/include/Shared/: EngineConfig.h  IConfig.h  ILog.h
src/include/Shared/Utils/: StringUtils.h
toolchain/: LICENSE  zig-toolchain.cmake
